project/k8s/.ipynb_checkpoints/frontend-deployment-checkpoint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: streamlit-frontend
          image: jek2141/apartments_frontend:v3
          ports:
          - containerPort: 8501

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector: 
    component: frontend
  ports: 
    - port: 8501
