project/k8s/.ipynb_checkpoints/ingress-checkpoint.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: public-routing
spec:
    rules:
        - host: apartments.com
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend: 
                    service:
                      name: frontend-service
                      port: 
                        number: 8501
